Responsive Overlapping Buttons Fix

--- a/docs/assets/css/responsive.css
+++ b/docs/assets/css/responsive.css
@@ -2,7 +2,7 @@
 
 @media screen and (max-width: 992px) {
   .footer {
-      padding-left: 8p;
+      padding-left: 8px;
       text-align: left;
   }
 }
